tests/ui/async-await/feature-async-for-loop.stderr
error[E0658]: `for await` loops are experimental
  --> $DIR/feature-async-for-loop.rs:8:13
   |
LL |         for await _i in core::async_iter::from_iter(0..3) {
   |             ^^^^^
   |
   = help: add `#![feature(async_for_loop)]` to the crate attributes to enable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
